Updated branch publish logic: main, or public/*
(cherry picked from commit 67e153a49392177083fee58e9b2bfcb104afdda0)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -128,9 +128,8 @@ jobs:
     build-box2d-main:
         name: Build / retrieve Box2D native libs (Dist)
         needs: detect-tag
-        if: github.ref == 'refs/heads/main' &&
-            !contains(github.ref_name, 'codex/') &&
-            !contains(github.event.pull_request.labels.*.name, 'codex')
+        if: ${{ github.ref == 'refs/heads/main' ||
+            startsWith(github.ref_name, 'public/') }}
         strategy:
             matrix:
                 include:
@@ -313,9 +312,8 @@ jobs:
     publish-bindings:
         name: Publish NuGet package
         needs: [ run-tests, build-box2d-main, detect-tag ]
-        if: ${{ github.event_name != 'pull_request' &&
-            !contains(github.ref_name, 'codex/') &&
-            !contains(github.event.pull_request.labels.*.name, 'codex') }}
+        if: ${{ github.ref == 'refs/heads/main' ||
+            startsWith(github.ref_name, 'public/') }}
         runs-on: [self-hosted, Linux, X64]
         steps:
             -   id: purge
@@ -333,7 +331,7 @@ jobs:
             -   name: "Pack NuGet package"
                 run: |
                     dotnet pack src/Box2DBindings \
-                      -p:PackageVersion=${{ needs.detect-tag.outputs.pkg_ver }} \
+                      -p:Version=${{ needs.detect-tag.outputs.pkg_ver }} \
                       -c Release
 
             -   name: "Push to NuGet"
