--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -272,8 +272,10 @@ jobs:
                       echo "Missing Linux shared library: $lib"
                       exit 1
                     fi
-                    cp "$lib" src/UnitTests/bin/Debug/net8.0/
-                    cp "$lib" src/UnitTests/bin/Debug/net9.0/
+                    mkdir src/UnitTests/bin/Debug/net8.0/runtimes/linux-x64/native
+                    cp "$lib" src/UnitTests/bin/Debug/net8.0/runtimes/linux-x64/native/
+                    mkdir src/UnitTests/bin/Debug/net9.0/runtimes/linux-x64/native
+                    cp "$lib" src/UnitTests/bin/Debug/net9.0/runtimes/linux-x64/native/
                     
                     sync
 
