Re-added upx for Linux and Windows native libs

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -327,6 +327,24 @@ jobs:
                 with:
                     path: src/Box2DBindings/native
                     pattern: "*"
+            
+            -   name: "Run UPX on native libs"
+                run: |
+                    if [ -f src/Box2DBindings/native/linux-x64/libbox2d.so ]; then
+                        upx src/Box2DBindings/native/linux-x64/libbox2d.so
+                    fi
+                    if [ -f src/Box2DBindings/native/linux-x86/libbox2d.so ]; then
+                        upx src/Box2DBindings/native/linux-x86/libbox2d.so
+                    fi
+                    if [ -f src/Box2DBindings/native/linux-arm64/libbox2d.so ]; then
+                        upx src/Box2DBindings/native/linux-arm64/libbox2d.so
+                    fi
+                    if [ -f src/Box2DBindings/native/win-x64/libbox2d.dll ]; then
+                        upx src/Box2DBindings/native/win-x64/libbox2d.dll
+                    fi
+                    if [ -f src/Box2DBindings/native/win-x86/libbox2d.dll ]; then
+                        upx src/Box2DBindings/native/win-x86/libbox2d.dll
+                    fi
 
             -   name: "Pack NuGet package"
                 run: |
