Added Valid to AABB and Rotation Updated docs for CastOutput, CastResultCallback, MotorJoint, RayResult, World.CastRay Added LocalAnchor setters to Joint Added LinearSeparation and AngularSeparation properties to Joint Added TargetTranslation property to PrismaticJointDef Added TargetAngle property to RevoluteJointDef

--- a/src/Box2DBindings/Box2DBindings.csproj
+++ b/src/Box2DBindings/Box2DBindings.csproj
@@ -135,6 +135,12 @@
       <Compile Update="Body_Externs.cs">
         <DependentUpon>Body.cs</DependentUpon>
       </Compile>
+      <Compile Update="AABB_Externs.cs">
+        <DependentUpon>AABB.cs</DependentUpon>
+      </Compile>
+      <Compile Update="Rotation_Externs.cs">
+        <DependentUpon>Rotation.cs</DependentUpon>
+      </Compile>
       <Compile Update="Core_Externs.cs">
         <DependentUpon>Core.cs</DependentUpon>
       </Compile>
